syntax = "proto3";
package dydxprotocol.prices;

option go_package = "github.com/StreamFinance-Protocol/stream-chain/protocol/x/prices/types";

// MarketPrice is used by the application to store/retrieve oracle price.
message MarketPrice {
  // Unique, sequentially-generated value that matches `MarketParam`.
  uint32 id = 1;

  // Static value. The exponent of the price. See the comment on the duplicate
  // MarketParam field for more information.
  sint32 exponent = 2;

  // The variable value that is updated by oracle price updates. `0` if it has
  // never been updated, `>0` otherwise.
  uint64 price = 3;
}

// MarketPriceUpdate is used to update the price of a single market.
message MarketPriceUpdates {
  // MarketPrice represents a price update for a single market
  message MarketPriceUpdate {
    // The id of market to update
    uint32 market_id = 1;
    // The updated price
    uint64 price = 2;
  }

  repeated MarketPriceUpdate market_price_updates = 1;
}
